[gd_scene load_steps=56 format=2]

[ext_resource path="res://objects/characters/Player.gd" type="Script" id=1]
[ext_resource path="res://arts/collage/Collage_Witch_Girl.png" type="Texture" id=2]
[ext_resource path="res://arts/pixelArt/witch_idle.png" type="Texture" id=3]
[ext_resource path="res://objects/characters/flip_script.gd" type="Script" id=4]
[ext_resource path="res://arts/abstrastArt/player.png" type="Texture" id=5]
[ext_resource path="res://sounds/pixel_sfx/pixel_player_bullet_shot.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/AbstractFire.wav" type="AudioStream" id=7]
[ext_resource path="res://scripts/AudioRandomizer.gd" type="Script" id=8]
[ext_resource path="res://sounds/AbstractBullet.wav" type="AudioStream" id=9]
[ext_resource path="res://arts/ui/bosshealth.png" type="Texture" id=10]
[ext_resource path="res://arts/abstrastArt/playercircle.png" type="Texture" id=11]
[ext_resource path="res://arts/3D/3D_Witch_Idle-min.png" type="Texture" id=12]
[ext_resource path="res://sounds/pixel_sfx/pixel_player_hit.wav" type="AudioStream" id=13]
[ext_resource path="res://sounds/collage_sfx/CollageLaser.wav" type="AudioStream" id=14]
[ext_resource path="res://sounds/AbstractPlayerHit.wav" type="AudioStream" id=15]
[ext_resource path="res://sounds/AbstractBossHit.wav" type="AudioStream" id=16]
[ext_resource path="res://arts/particles/whitecircle.png" type="Texture" id=17]
[ext_resource path="res://arts/ui/circle.png" type="Texture" id=18]

[sub_resource type="Gradient" id=17]
offsets = PoolRealArray( 0, 0.150838, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0, 0, 0, 0.666667, 1, 1, 1, 0 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 74.5068, 13.4393, 41.7534, 40.0375 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 341, 341 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 341, 0, 341, 341 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 682, 0, 341, 341 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 1023, 0, 341, 341 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 1364, 0, 341, 341 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 1705, 0, 341, 341 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 2046, 0, 341, 341 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 2387, 0, 341, 341 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 2728, 0, 341, 341 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 3069, 0, 341, 341 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 3410, 0, 341, 341 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 3751, 0, 341, 341 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 106.565, 165.566, 818.873, 738.983 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 526, 526 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 526, 0, 526, 526 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1052, 0, 526, 526 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1578, 0, 526, 526 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2104, 0, 526, 526 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2630, 0, 526, 526 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3156, 0, 526, 526 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3682, 0, 526, 526 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 4208, 0, 526, 526 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 4734, 0, 526, 526 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 5260, 0, 526, 526 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( -11.8309, 46.8765, 449.028, 456.638 )

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[node name="Player" type="KinematicBody2D" groups=["style"]]
collision_layer = 2
script = ExtResource( 1 )

[node name="HealthBar" type="TextureProgress" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_right = 1.0
margin_left = -82.0
margin_top = -83.0
margin_right = 267.0
margin_bottom = 267.0
rect_scale = Vector2( 0.5, 0.5 )
value = 100.0
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 10 )
fill_mode = 5
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 0.517647, 0.878431, 0.960784, 1 )

[node name="Style0" type="Node2D" parent="."]

[node name="AnimatedSprite" type="Sprite" parent="Style0"]
self_modulate = Color( 0.517647, 0.878431, 0.960784, 1 )
texture = ExtResource( 5 )

[node name="Playercircle" type="Sprite" parent="Style0/AnimatedSprite"]
self_modulate = Color( 0.517647, 0.878431, 0.960784, 1 )
position = Vector2( 30, -15 )
texture = ExtResource( 11 )

[node name="Playercircle2" type="Sprite" parent="Style0/AnimatedSprite"]
self_modulate = Color( 0.517647, 0.878431, 0.960784, 1 )
position = Vector2( 30, 16 )
texture = ExtResource( 11 )

[node name="FiringPositions" type="Node2D" parent="Style0/AnimatedSprite"]

[node name="LeftShot" type="Node2D" parent="Style0/AnimatedSprite/FiringPositions" groups=["shots0"]]
position = Vector2( 30, -15 )

[node name="RightShot" type="Node2D" parent="Style0/AnimatedSprite/FiringPositions" groups=["shots0"]]
position = Vector2( 30, 16 )

[node name="TransEffect" type="CPUParticles2D" parent="Style0"]
z_index = -1
emitting = false
amount = 4
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 0.72
texture = ExtResource( 5 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 55.05
initial_velocity_random = 0.51
angular_velocity_random = 0.41
damping = 94.5
damping_random = 1.0
scale_amount_random = 0.62
color_ramp = SubResource( 17 )

[node name="FireSound" type="AudioStreamPlayer2D" parent="Style0"]
stream = ExtResource( 9 )
bus = "Sound"
script = ExtResource( 8 )
pitch_low = 0.784
ptch_high = 1.376
volume_low = -5.0
base_volume = -15.0

[node name="HitSound" type="AudioStreamPlayer2D" parent="Style0"]
stream = ExtResource( 15 )
bus = "Sound"
script = ExtResource( 8 )
pitch_low = 0.784
ptch_high = 1.376
volume_low = -10.0
base_volume = 10.0

[node name="Style1" type="Node2D" parent="."]
visible = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="Style1"]
position = Vector2( 0, -5 )
scale = Vector2( 3, 3 )
frames = SubResource( 8 )
frame = 2
speed_scale = 2.0
playing = true
script = ExtResource( 4 )

[node name="Shot" type="Node2D" parent="Style1/AnimatedSprite" groups=["shots1"]]

[node name="TransEffect" type="CPUParticles2D" parent="Style1"]
position = Vector2( 0, -15 )
z_index = -1
emitting = false
amount = 4
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 0.72
texture = SubResource( 30 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 55.05
initial_velocity_random = 0.51
angular_velocity_random = 0.41
damping = 94.5
damping_random = 1.0
scale_amount = 3.5
scale_amount_random = 0.62
color_ramp = SubResource( 17 )

[node name="FireSound" type="AudioStreamPlayer2D" parent="Style1"]
stream = ExtResource( 6 )
bus = "Sound"
script = ExtResource( 8 )
pitch_low = 0.864
ptch_high = 1.108
volume_low = -5.0
base_volume = 6.0

[node name="HitSound" type="AudioStreamPlayer2D" parent="Style1"]
stream = ExtResource( 13 )
bus = "Sound"
script = ExtResource( 8 )
pitch_low = 0.784
ptch_high = 1.376
volume_low = -10.0
base_volume = 15.0

[node name="Style2" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Style2"]
position = Vector2( 10, -5 )
rotation = 3.14159
scale = Vector2( 0.514216, -0.514216 )
frames = SubResource( 15 )
frame = 7
playing = true
script = ExtResource( 4 )

[node name="Shot" type="Node2D" parent="Style2/AnimatedSprite" groups=["shots2"]]
position = Vector2( 108.945, 28.3255 )

[node name="TransEffect" type="CPUParticles2D" parent="Style2"]
position = Vector2( 0, -15 )
z_index = -1
emitting = false
amount = 4
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 0.72
texture = SubResource( 43 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 55.05
initial_velocity_random = 0.51
angular_velocity_random = 0.41
damping = 94.5
damping_random = 1.0
scale_amount = 0.01
scale_amount_random = 0.23
color_ramp = SubResource( 17 )

[node name="FireSound" type="AudioStreamPlayer2D" parent="Style2"]
stream = ExtResource( 7 )
bus = "Sound"
script = ExtResource( 8 )
volume_low = 3.0
volume_high = 5.0
base_volume = 4.0

[node name="HitSound" type="AudioStreamPlayer2D" parent="Style2"]
stream = ExtResource( 13 )
bus = "Sound"
script = ExtResource( 8 )
pitch_low = 0.784
ptch_high = 1.376
volume_low = -10.0
base_volume = 15.0

[node name="Style3" type="Node2D" parent="."]
visible = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="Style3"]
position = Vector2( -1, 11 )
scale = Vector2( 0.411525, 0.411525 )
frames = SubResource( 29 )
frame = 8
playing = true
script = ExtResource( 4 )

[node name="Shot" type="Node2D" parent="Style3/AnimatedSprite" groups=["shots3"]]

[node name="TransEffect" type="CPUParticles2D" parent="Style3"]
z_index = -1
emitting = false
amount = 4
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 0.72
texture = SubResource( 16 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 55.05
initial_velocity_random = 0.51
angular_velocity_random = 0.41
damping = 94.5
damping_random = 1.0
scale_amount = 0.4
scale_amount_random = 0.21
color_ramp = SubResource( 17 )

[node name="FireSound" type="AudioStreamPlayer2D" parent="Style3"]
stream = ExtResource( 14 )
bus = "Sound"
script = ExtResource( 8 )
pitch_low = 0.7
volume_low = -5.0

[node name="HitSound" type="AudioStreamPlayer2D" parent="Style3"]
stream = ExtResource( 16 )
bus = "Sound"
script = ExtResource( 8 )
pitch_low = 0.784
ptch_high = 1.376
volume_low = -5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FireTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="ReadyFlash" type="Tween" parent="."]

[node name="RegenerateTimer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="CollisionIndi" type="Sprite" parent="."]
modulate = Color( 0.768627, 0.101961, 0.101961, 0.219608 )
scale = Vector2( 0.399516, 0.399516 )
texture = ExtResource( 17 )

[node name="Bosshealth" type="Sprite" parent="CollisionIndi"]
modulate = Color( 1, 0.027451, 0.027451, 1 )
scale = Vector2( 0.256957, 0.256957 )
texture = ExtResource( 10 )

[node name="Circle" type="Sprite" parent="CollisionIndi"]
scale = Vector2( 0.918096, 0.918096 )
texture = ExtResource( 18 )
